--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,11 @@
 	<classpathentry kind="lib" path="vendor/buildlib/jmock-2.5.1.jar"/>
 	<classpathentry kind="lib" path="vendor/buildlib/junit-dep-4.10.jar"/>
 	<classpathentry kind="lib" path="vendor/lib/guava-11.0.2.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/commons-io-2.3.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/dtd-xercesImpl.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/serializer.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/xalan.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/xom-1.2.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
